cv terminado con su estilo

--- a/Index.html
+++ b/Index.html
@@ -1,52 +1,183 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./assets/style/style.css" type="text/css">
     <title>Curriculum vitae</title>
 </head>
+
 <body>
-<div class="main-container">
-    <!-- NAV BAR -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Curriculum Vitae</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-       <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Desafios
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-            <li><a class="dropdown-item" href="#">Desafio 1()</a></li>
-            <li><a class="dropdown-item" href="#">Desafio 2()</a></li>
-            <li><a class="dropdown-item" href="#">Desafio 3()</a></li>
-            <li><a class="dropdown-item" href="#">Desafio 4()</a></li>
-            <li><a class="dropdown-item" href="#">Desafio 5()</a></li>
-          </ul>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="#">Portafolio</a>
-        </li>
-      </ul>
+    <div class="main-container">
+        <!-- NAV BAR -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Curriculum Vitae</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle active" href="#" id="navbarDropdownMenuLink"
+                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Desafios
+                            </a>
+                            <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <li><a class="dropdown-item" href="#">Desafio 1()</a></li>
+                                <li><a class="dropdown-item" href="#">Desafio 2()</a></li>
+                                <li><a class="dropdown-item" href="#">Desafio 3()</a></li>
+                                <li><a class="dropdown-item" href="#">Desafio 4()</a></li>
+                                <li><a class="dropdown-item" href="#">Desafio 5()</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active" href="#">Portafolio</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+        <!-- CURRICULUM VITAE -->
+        <div class="cv">
+            <h1 class="titulo">Joaquin Escobar Letelier</h1>
+            <ul class="datos-personales">
+                <li>joaquin.escobar.dev@gmail.com</li>
+                <li>+56 9 6655 6497</li>
+                <li><a href="https://www.linkedin.com/in/joaquinescobarlet">linkedin.com/in/joaquinescobarlet</a></li>
+                <li><a href="https://github.com/JoaquinEscobarDev">github.com/JoaquinEscobarDev</a></li>
+            </ul>
+
+            <div class="perfil-profesional">
+
+                <h3 class="titulo2">PERFIL PROFESIONAL</h3>
+                <p class="sobre-mi">
+                    Tecnico en Programacion y Analisis de Sistemas, egresado del Instituto Profesional IPSS. Poseo una
+                    formacion solida en desarrollo front-end y back-end, con experiencia en entornos colaborativos.
+                    Atualmente me encuentro en formacion para convertirme en desarrollador full stack, profundizando en
+                    tecnologias modernas del ecosistema JavaScript. Me especializo en el desarrollo de soluciones web
+                    utilizando tecnologias como HTML, CSS, JavaScript, PHP, Laravel y MySQL, aplicando buenas practicas
+                    de programacion y control de versiones. Estoy motivado por el aprendizaje continuo y la mejora
+                    constante, y busco aportar valor como desarrollador junior en proyectos innovadores, resolviendo
+                    problemas
+                    con un enfoque logico, tecnico y orientado a resultados
+                </p>
+            </div>
+
+            <div class="educacion">
+
+                <h3 class="titulo3">EDUCACION</h3>
+                <table>
+                    <tr>
+                        <th>Tecnico en Programaciion y Analisis de Sistemas</th>
+                    </tr>
+                    <tr>
+                        <td>Instituto Profesional IPSS </td>
+                        <td>Marzo 2022 – Noviembre 2024</td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="experiencia">
+
+                <h3 class="titulo4">EXPERIENCIA</h3>
+                <table>
+                    <tr>
+                        <th>Desarrollador Freelance</th>
+                    </tr>
+                    <tr>
+                        <td>Remoto</td>
+                        <td>Julio 2024 – Actualidad</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Desarrollo de proyectos personalizados como juegos tipo memorice con tecnologıas
+                                    front-end (HTML,
+                                    CSS, JavaScript).</li>
+                                <li>Creaciion de Approved Emails y mailings para la plataforma Veeva, aplicando diseño
+                                    responsive en
+                                    HTML con uso de tablas anidadas y formatos adaptados a clientes farmaceuticos.</li>
+                                <li>Gestion del ciclo completo: analisis de requerimientos, diseño, desarrollo, testeo y
+                                    entrega.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+
+                <table>
+                    <tr>
+                        <th>Programador Practicante – Europa Press Limitada</th>
+                    </tr>
+                    <tr>
+                        <td>Santiago, Chile</td>
+                        <td>Marzo 2024 – Junio 2024</td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <ul>
+                                <li>Desarrollo de proyectos para Approved Email y CLM en la plataforma Veeva, utilizando
+                                    HTML,
+                                    CSS y JavaScript.</li>
+                                <li>Realizacion de prototipos funcionales de paginas web utilizando PHP, MySQL y
+                                    Laravel.</li>
+                                <li> Colaboracion con equipos de diseño y QA en entregas orientadas al cliente.</li>
+                            </ul>
+                        </td>
+                    </tr>
+                </table>
+            </div>
+
+            <div class="habilidades">
+                <h3 class="titulo5">HABILIDADES TECNICAS</h3>
+                <ul>
+                    <li>Lenguajes de Programación: PHP, JavaScript, Python, Java, Node.js.</li>
+                    <li>Frameworks: Laravel, Express.js.</li>
+                    <li>Front-End: HTML, CSS, JavaScript.</li>
+                    <li>Bases de Datos: MySQL, SQL.</li>
+                    <li>Herramientas: Git, GitHub, Trello, Asana.</li>
+                    <li>Metodologías: Waterfall.</li>
+                </ul>
+            </div>
+
+            <div class="cursos">
+                <h3 class="titulo6">CURSOS</h3>
+                <table>
+                    <tr>
+                        <td>Full Stack JavaScript – Desafıo Latam</td>
+                        <td>Mayo 2025 – Actualidad</td>
+                    </tr>
+                    <tr>
+                        <td>Data Science – Platzi</td>
+                        <td>Enero 2024 – Actualidad</td>
+                                              
+                    </tr>
+                </table>
+
+            </div>
+
+            <div class="idiomas">
+                <h3 class="titulo7">IDIOMAS</h3>
+                <ul>
+                    <li>Español: Nativo</li>
+                    <li>Ingles: A2</li>
+                </ul>   
+
+            </div>
+
+        <!-- FOOTER -->
+
     </div>
-  </div>
-</nav>
 
-
-<!-- CURRICULUM VITAE -->
-
-
-
-<!-- FOOTER -->
-
-</div>
-    
 </body>
+
 </html>
