--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
     <link rel="stylesheet" href="./assets/style/style.css" type="text/css">
     <title>Curriculum vitae</title>
 </head>
@@ -18,7 +20,7 @@
         <!-- NAV BAR -->
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Curriculum Vitae</a>
+                <a class="navbar-brand" href="index.html">Curriculum Vitae</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -31,11 +33,11 @@
                                 Desafios
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                <li><a class="dropdown-item" href="#">Desafio 1()</a></li>
-                                <li><a class="dropdown-item" href="#">Desafio 2()</a></li>
-                                <li><a class="dropdown-item" href="#">Desafio 3()</a></li>
-                                <li><a class="dropdown-item" href="#">Desafio 4()</a></li>
-                                <li><a class="dropdown-item" href="#">Desafio 5()</a></li>
+                                <li><a class="dropdown-item" href="./desafio1/index.html">Desafio 1</a></li>
+                                <li><a class="dropdown-item" href="/desafio2/index.html">Desafio 2</a></li>
+                                <li><a class="dropdown-item" href="/desafio3/index.html">Desafio 3</a></li>
+                                <li><a class="dropdown-item" href="/desafio4/index.html">Desafio 4</a></li>
+                                <li><a class="dropdown-item" href="desafio5/index.html">Desafio 5</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -159,7 +161,7 @@
                     <tr>
                         <td>Data Science – Platzi</td>
                         <td>Enero 2024 – Actualidad</td>
-                                              
+
                     </tr>
                 </table>
 
@@ -170,13 +172,20 @@
                 <ul>
                     <li>Español: Nativo</li>
                     <li>Ingles: A2</li>
-                </ul>   
+                </ul>
 
             </div>
 
-        <!-- FOOTER -->
-
-    </div>
+            <!-- FOOTER -->
+            <div class="footer">
+               <div class="footer-horizontal">
+                    <div><i class="fas fa-envelope"></i> joaquin.escobar.dev@gmail.com</div>
+                    <div><i class="fas fa-phone"></i> +56 9 6655 6497</div>
+                    <div><i class="fab fa-linkedin"></i> <a href="https://www.linkedin.com/in/joaquinescobarlet">linkedin.com/in/joaquinescobarlet</a></div>
+                    <div><i class="fab fa-github"></i><a href="https://github.com/JoaquinEscobarDev">github.com/JoaquinEscobarDev</a></div>
+                </div>
+            </div>
+        </div>
 
 </body>
 
