--- a/desafio1/index.html
+++ b/desafio1/index.html
@@ -27,10 +27,10 @@
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                                   <li><a class="dropdown-item" href="index.html">Desafio 1</a></li>
-                                <li><a class="dropdown-item" href="/desafio2/index.html">Desafio 2</a></li>
-                                <li><a class="dropdown-item" href="/desafio3/index.html">Desafio 3</a></li>
-                                <li><a class="dropdown-item" href="/desafio4/index.html">Desafio 4</a></li>
-                                <li><a class="dropdown-item" href="/desafio5/index.html">Desafio 5</a></li>
+                                <li><a class="dropdown-item" href="../desafio2/index.html">Desafio 2</a></li>
+                                <li><a class="dropdown-item" href="../desafio3/index.html">Desafio 3</a></li>
+                                <li><a class="dropdown-item" href="../desafio4/index.html">Desafio 4</a></li>
+                                <li><a class="dropdown-item" href="../desafio5/index.html">Desafio 5</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
