--- a/desafio4/index.html
+++ b/desafio4/index.html
@@ -30,11 +30,11 @@
                                 Desafios
                             </a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                                  <li><a class="dropdown-item" href="/desafio1/index.html">Desafio 1</a></li>
-                                <li><a class="dropdown-item" href="/desafio2/index.html">Desafio 2</a></li>
-                                <li><a class="dropdown-item" href="/desafio3/index.html">Desafio 3</a></li>
+                                  <li><a class="dropdown-item" href="../desafio1/index.html">Desafio 1</a></li>
+                                <li><a class="dropdown-item" href="../desafio2/index.html">Desafio 2</a></li>
+                                <li><a class="dropdown-item" href="../desafio3/index.html">Desafio 3</a></li>
                                 <li><a class="dropdown-item" href="index.html">Desafio 4</a></li>
-                                <li><a class="dropdown-item" href="/desafio5/index.html">Desafio 5</a></li>
+                                <li><a class="dropdown-item" href="../desafio5/index.html">Desafio 5</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
