se agrego portafolio, modifique ruta para acceder a portafolio en navbar, y agregue imagenes de trabajaos

--- a/desafio5/index.html
+++ b/desafio5/index.html
@@ -41,9 +41,7 @@
                                 <li><a class="dropdown-item" href="index.html">Desafio 5</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Portafolio</a>
-                        </li>
+                        <li class="nav-item"><a class="nav-link active" href="../portafolio.html">Portafolio</a></li>
                     </ul>
                 </div>
             </div>
