--- a/desafio1/portafolio.html
+++ b/desafio1/portafolio.html
@@ -33,9 +33,7 @@
                                 <li><a class="dropdown-item" href="../desafio5/index.html">Desafio 5</a></li>
                             </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active" href="#">Portafolio</a>
-                        </li>
+                       <li class="nav-item"><a class="nav-link active" href="../portafolio.html">Portafolio</a></li>
                     </ul>
                 </div>
             </div>
