--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active" href="#">Portafolio</a>
+                            <a class="nav-link active" href="portafolio.html">Portafolio</a>
                         </li>
                     </ul>
                 </div>
